Adding copy and services to menus

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="menu">
         <ul>
           <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
           <li><a href="#">Gallery</a></li>
           <li>
             <a
@@ -35,6 +36,7 @@
         <div class="wrapper">
           <ul class="nav">
             <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
             <li><a href="#">Gallery</a></li>
             <li>
               <a
@@ -59,11 +61,27 @@
 
       <div class="info">
         <p>
-          Chef Jef Wright is now offering private dinners for small groups as
-          well as cooking classes, both in person and virtual, for up to 10
-          people at a time. Host an intimate dinner for a few loved ones or have
-          a dinner party for friends and family, all without ever leaving your
-          house.
+          Jef Wright is a graduate of Le Cordon Bleu Culinary Academy, he has
+          worked in a wide array of cuisines and restaurants both large and
+          intimate. For many years he worked in Atlanta GA, with Richard Blais,
+          Top Chef All-Stars winner, where he focused on "molecular gastronomy"
+          as a means to reimagine and refine traditional southern dishes. His
+          passion for continued learning has taken him to Philadelphia and New
+          York where he worked in both a 2 Michelin star restaurant and for
+          several large upscale restaurants. His style is best described as
+          heavily influenced by traditional French and Spanish cuisine with a
+          love for Southern food, always focusing on refined techniques and
+          fresh, local ingredients. Most recently, Jef was Executive Chef
+          leading the kitchen at Sur Lie in downtown Portland where he helped to
+          successfully guide the restaurant through the pandemic. During the
+          pandemic shutdown, partnered with
+          <a href="https://www.winewiseevents.com/" target="_blank"
+            >Wine Wise Events</a
+          >, Jef hosted virtual wine dinners each week. high-end, date-night
+          restaurant quality food and amazing, perfectly paired wine delivered
+          to your house, finished and enjoyed through Zoom. He looks forward to
+          sharing his excitement and passion for delicious, sophisticated
+          cuisine and his dry jokes with you.
         </p>
 
         <a
@@ -75,18 +93,35 @@
       </div>
     </section>
     <section class="services">
-      <div class="cards">
+      <div id="services" class="cards">
         <div>
           <h1>Cooking Classes</h1>
           <hr />
+          <p>
+            available for private in-person or virtual cooking classes. We can
+            work on basic cooking skills and techniques or pick a specific
+            cuisine or dish to work on.
+          </p>
         </div>
         <div>
           <h1>Private Dinners</h1>
           <hr />
+          <p>
+            Now booking private dinners for up to 15 people. Host an intimate
+            dinner for a few loved ones or have a dinner party for friends and
+            family, all without ever leaving your house. Happy to work together
+            to create a menu and accomodate any allergies/preferences.
+          </p>
         </div>
         <div>
           <h1>Consulting</h1>
           <hr />
+          <p>
+            Need help with running/managing/opening your restaurant? I can help
+            with all aspects of the kitchen including writing menus, hiring
+            staff, laying out your kitchen for maximum efficiency, tracking and
+            correcting food and labor costs.
+          </p>
         </div>
       </div>
     </section>
