adding footer and instagram link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section>
     <section class="services">
       <div id="services" class="cards">
-        <div>
+        <div class="card">
           <h1>Cooking Classes</h1>
           <hr />
           <p>
@@ -103,7 +103,7 @@
             cuisine or dish to work on.
           </p>
         </div>
-        <div>
+        <div class="card">
           <h1>Private Dinners</h1>
           <hr />
           <p>
@@ -113,7 +113,7 @@
             to create a menu and accomodate any allergies/preferences.
           </p>
         </div>
-        <div>
+        <div class="card">
           <h1>Consulting</h1>
           <hr />
           <p>
@@ -125,6 +125,15 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+      <p>&copy; Chef Jef Wright 2021</p>
+      <a href="https://www.instagram.com/thejefwright/" target="_blank">
+        <img
+          src="/assets/Instagram_Glyph_Gradient_RGB.png"
+          alt="instagram"
+          height="50px"
+        />
+      </a>
+    </footer>
   </body>
 </html>
