Adding background and shadow to hamburger

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   </head>
   <body>
     <header>
-      <div class="burger-wrapper">
-        <div class="hamburger"></div>
+      <div class="shadow-wrapper">
+        <div class="burger-wrapper hamburger-scrolled">
+          <div class="hamburger"></div>
+        </div>
       </div>
       <div class="menu">
         <ul>
