creating the gallery page and adding default image

--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/styles.css" />
+    <title>Gallery</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <header>
+        <div class="shadow-wrapper">
+          <div class="burger-wrapper hamburger-scrolled">
+            <div class="hamburger"></div>
+          </div>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
+            <li>
+              <a
+                href="mailto: jef@jef.pizza?subject=booking a private dinner"
+                target="_blank"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+        <nav>
+          <div class="wrapper">
+            <ul class="nav">
+              <li><a href="/index.html#about">About</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="/gallery.html">Gallery</a></li>
+              <li>
+                <a
+                  href="mailto: jef@jef.pizza?subject=booking a private dinner"
+                  target="_blank"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <img src="/assets/beet-salad-mimi.jpeg" alt="Beet Salad" />
+      <img
+        src="/assets/little gem caesar-mimi.jpeg"
+        alt="Little Gem Caesar salad"
+      />
+      <img
+        src="/assets/pork belly tonnato-mimi.jpeg"
+        alt="Pork Belly Tonnato"
+      />
+      <img src="/assets/plates-mimi.jpeg" alt="dishes" />
+      <img src="/assets/octo-mimi.jpeg" alt="Octopus" />
+    </div>
+  </body>
 </html>
