--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <title>Jef Wright - Private Chef</title>
     <script src="/script.js" defer></script>
+    <meta property="og:image" content="/assets/beet-salad-mimi.jpeg" />
   </head>
   <body>
     <header>
@@ -24,7 +25,7 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#">Gallery</a></li>
+          <li><a href="/gallery.html">Gallery</a></li>
           <li>
             <a
               href="mailto: jef@jef.pizza?subject=booking a private dinner"
@@ -39,7 +40,7 @@
           <ul class="nav">
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
             <li>
               <a
                 href="mailto: jef@jef.pizza?subject=booking a private dinner"
@@ -95,6 +96,7 @@
       </div>
     </section>
     <section class="services">
+      <h2>Services:</h2>
       <div id="services" class="cards">
         <div class="card">
           <h1>Cooking Classes</h1>
@@ -128,7 +130,7 @@
       </div>
     </section>
     <footer>
-      <p>&copy; Chef Jef Wright 2021</p>
+      <p>&copy; 2021 Chef Jef Wright</p>
       <a href="https://www.instagram.com/thejefwright/" target="_blank">
         <img
           src="/assets/Instagram_Glyph_Gradient_RGB.png"
