changing default sharing image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Jef Wright - Private Chef</title>
     <script src="/script.js" defer></script>
-    <meta property="og:image" content="/assets/beet-salad-mimi.jpeg" />
+    <meta property="og:image" content="/assets/octo-mimi.jpeg" />
   </head>
   <body>
     <header>
