--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <title>Jef Wright - Private Chef</title>
+    <link rel="shortcut icon" type="image/jpg" href="/assets/favicon.ico" />
     <script src="/script.js" defer></script>
     <meta property="og:image" content="/assets/octo-mimi.jpeg" />
   </head>
